welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:19: error: ';' expected but ',' found.
il faut faire quatre pas en avant, deux pas à gauche, quatre pas à droite, deux pas à droite, et quatre pas à gauche. Il faut faire 7 tours de circuit.
                                 ^