welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var x = 0
while (x < 16) {
	avance(4);
	x=x+4;
	gauche();
	avance(2);
	x=x+2
	droite();
	avance(4);
	droite();
	avance(2);
	x=x+2;
	gauche();
	avance(4);
	x=x+4
}

il faut faire quatre pas en avant, deux pas à gauche, quatre pas à droite, deux pas à droite, et quatre pas à gauche. Il faut faire 7 tours de circuit.
